    "{{#if: test | true | false}}" and "{{#ifeq: 1 | 2 | true | false}}".
  * Basic support for the #expr: parser function.  Only basic operations are
    supported (+, -, /, *) and parentheses must be used to ensure that the
    order of operations is followed.
  * Support Mediawiki's {{subst:}} syntax.  Usage: {{subst:template}}.
  * Support added for the __NOEDITSECTION__ behavior switch.
  * New Special:VirtualWiki page for administering virtual wikis and
    namespaces, including the ability to configure translated / alternate
    namespaces.
  * Add the ability for sysadmins to create user accounts (hanspeterklapf).
  * Topic add/update is now significantly faster due to query refactoring
    and changes so that the search index is not re-optimized after every
    add/update.
  * Topic history retrieval speed improved by a factor of up to 100x for
    large data sets by adding an additional database index.
  * Search engine optimizations.  Existing JAMWiki installs may want to
    rebuild their search index.
  * Filter results by namespace added to Special:Allpages.
  * Update the CSS & HTML used for forms.  Requires StyleSheet topic update.
  * Support ehcache.xml configuration.  Based on code by Daniel Fisla (dfisla).
  * Automatically populate sample JDBC values based on database type on the
    setup and admin pages.
  * Remove all dependencies on Spring from the jamwiki-core project by
    converting org.jamwiki.model.Role to an interface and creating a new
    org.jamwiki.authentication.RoleImpl class.
  * Run the spam filter against edit comments as well as topic content to
    thwart spam attempts.
  * Remove ability to automatically upgrade from versions prior to 0.7.0.
  * Upgrade to Spring Framework 3.0.1.RELEASE.
  * Upgrade to Spring Security 3.0.2.RELEASE.
  * Upgrade to Lucene Search 3.0.1.
  * Upgrade to ehcache 1.7.0.
  * Upgrade to commons-pool 1.5.4.
  * Upgrade to JUnit 4.7.

Bugfixes:
