@@ -758,6 +758,8 @@ STATEMENT_SELECT_TOPIC_BY_TYPE = \
 STATEMENT_SELECT_TOPIC_COUNT = \
     select count(topic_id) as topic_count from jam_topic \
     where jam_topic.virtual_wiki_id = ? \
+    and jam_topic.namespace_id >= ? \
+    and jam_topic.namespace_id <= ? \
     and jam_topic.delete_date is null 
 STATEMENT_SELECT_TOPIC = \
     select jam_topic.*, jam_topic_version.version_content \
